--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="gb2312" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Houngking Hsi-圣诞节快乐-www.indeex.org/Christmas</title>
+		<title>Houngking Hsi-www.indeex.org/Christmas</title>
 		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="css/demo.css" />
 		<link rel="stylesheet" type="text/css" href="css/component.css" />
